--- a/Moya Example/Moya Example/ViewControllers/EventViewController/Cells/EventFeedCell.xib
+++ b/Moya Example/Moya Example/ViewControllers/EventViewController/Cells/EventFeedCell.xib
@@ -4,20 +4,21 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="EventCell" rowHeight="250" id="KGk-i7-Jjw" customClass="EventCell" customModule="actisso" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="EventFeedCell" rowHeight="250" id="KGk-i7-Jjw" customClass="EventFeedCell" customModule="Moya_Example" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="250"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="249.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="events-heavenly-header" translatesAutoresizingMaskIntoConstraints="NO" id="1UI-2z-4Is">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="EventImage" translatesAutoresizingMaskIntoConstraints="NO" id="1UI-2z-4Is">
                         <rect key="frame" x="8" y="8" width="304" height="175"/>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="02/03/2018" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mTv-Pa-To4">
@@ -46,10 +47,15 @@
                     <constraint firstItem="vlA-M3-o0I" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="ylu-fg-iEl"/>
                 </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="bannerImageView" destination="1UI-2z-4Is" id="Iwp-bX-EQ8"/>
+                <outlet property="nameLabel" destination="vlA-M3-o0I" id="rql-TC-1o9"/>
+                <outlet property="timeLabel" destination="mTv-Pa-To4" id="VGp-Sr-Ixg"/>
+            </connections>
             <point key="canvasLocation" x="25" y="6"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="events-heavenly-header" width="732" height="370"/>
+        <image name="EventImage" width="512" height="384"/>
     </resources>
 </document>
